[package]
name = "hazmat"
version = "0.1.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
description = "A collection of helpers for working with hazardous materials in Rust crates."
repository = "https://github.com/str4d/hazmat"
license = "MIT OR Apache-2.0"
keywords = ["capability", "implement-only", "safety", "trait"]
categories = ["rust-patterns"]

[dependencies]
hazmat-macros = { version = "0.1.0", path = "hazmat-macros" }

[workspace]
members = [
    ".",
    "hazmat-macros",
]
