[package]
name = "hazmat-macros"
version = "0.1.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
description = "Procedural macros for working with hazardous materials in Rust crates."
repository = "https://github.com/str4d/hazmat"
license = "MIT OR Apache-2.0"
keywords = ["capability", "implement-only", "safety", "trait"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
